--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -73,3 +73,12 @@ p{
 .wind-icon{
   color:snow;
 }
+.footer-text{
+  margin-top:30px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  text-align: center;
+}
